# ProgrammazioneDiSistema-SharedEditor-Client

./: CMakeLists.txt  Client.cpp  Client.h  MessageSymbol.cpp  Style.cpp  Symbol.cpp  customButton.cpp  customButton.h  customcursor.cpp  documentShared.cpp  documentShared.h  main.cpp  message.cpp  myqtextedit.cpp  myqtextedit.h  project_icons.qrc  prova.pro  registrationform.cpp  registrationform.h  registrationform.ui  stacked.cpp  stacked.h  stacked.ui  textedit.cpp  textedit.h  userpage.cpp  userpage.h
Headers/: Client.h  MessageSymbol.h  Style.h  Symbol.h  customcursor.h  message.h  stacked.h  textedit.h  userpage.h
